--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ repositories {
 
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-devtools')
     compile('org.springframework.boot:spring-boot-starter-freemarker')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
