--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.1.2'
+        kotlinVersion = '1.1.4-3'
         springBootVersion = '1.5.3.RELEASE'
     }
     repositories {
@@ -58,3 +58,6 @@ dependencies {
     compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:0.14.1")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
