--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.freemarker.cache=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=fallentimbers.mailsender@gmail.com
+spring.mail.username=fallentimberssender@outlook.com
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
