--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.freemarker.cache=false
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
 spring.mail.username=fallentimberssender@outlook.com
 spring.mail.password=${SPRING_MAIL_PASSWORD}
