--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.freemarker.cache=false
 
-spring.mail.host=smtp-mail.outlook.com
-spring.mail.port=587
-spring.mail.username=fallentimberssender@outlook.com
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.host=${MAILGUN_SMTP_SERVER}
+spring.mail.port=${MAILGUN_SMTP_PORT}
+spring.mail.username=${MAILGUN_SMTP_LOGIN}
+spring.mail.password=${MAILGUN_SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
