--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.mail.host=${MAILGUN_SMTP_SERVER}
 spring.mail.port=${MAILGUN_SMTP_PORT}
 spring.mail.username=${MAILGUN_SMTP_LOGIN}
 spring.mail.password=${MAILGUN_SMTP_PASSWORD}
+spring.mail.test-connection=true
+spring.mail.properties.mail.smtp.domain=${MAILGUN_DOMAIN}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
